SMD: pageMessages: fix input text color in dark mode

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -104,10 +104,6 @@ html, body, .page {
 		background: rgba(0,0,0,0.1);
 		border-radius: 1rem;
 		pointer-events: none;
-
-		@media screen and (prefers-color-scheme: dark) {
-			background: rgba(255,255,255,0.15);
-		}
 	}
 
 	> * {
@@ -137,7 +133,17 @@ html, body, .page {
 	.icon-btn {
 		filter: brightness(0) invert(1);
 	}
-	input {
+	input, textarea {
 		color: white;
+	}
+
+	.input-group {
+		color: white;
+		&::before {
+			background: rgba(255,255,255,0.15);
+		}
+		> * {
+			color: white;
+		}
 	}
 }
